--- a/_config.yml
+++ b/_config.yml
@@ -29,7 +29,7 @@ excerpt_separator: "\n\n"
 safe:        false
 watch:       false    # deprecated
 server:      false    # deprecated
-baseurl:     /
+baseurl:     /fermin
 lsi:         false
 
 maruku:
